--- a/index.html
+++ b/index.html
@@ -51,12 +51,18 @@
 
         <div class="contact-form card">
           <h2>Get in Touch</h2>
-          <form>
+          <form name="contact" method="POST" data-netlify="true">
+            <input type="hidden" name="form-name" value="contact" />
             <div class="form-control">
               <input type="text" name="name" placeholder="Name" />
             </div>
             <div class="form-control">
-              <input type="text" name="message" placeholder="Message" />
+              <textarea
+                type="text"
+                name="message"
+                placeholder="Message"
+                rows="3"
+              ></textarea>
             </div>
             <div class="form-control">
               <input type="email" name="email" placeholder="Email" />
